state the dimension of instanton moduli space correctly this time

--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -471,10 +471,14 @@ When $G = SU(2)$, $\cM$ has the natural structure of a ``manifold away from some
 \fixme{...}
 \end{fact}
 
-Donaldson's idea was to extract interesting invariants of $X$ by studying the space $\cM$. The 
-\ti{dimension} of $\cM$ turns out not to be so interesting: it is determined by 
-$c_2(E)$, which has little to do with $X$. What is more interesting is to compute 
-certain \ti{integrals} over $\cM$.
+Donaldson's idea was to extract interesting invariants of $X$ by studying the space $\cM$. The most direct analogue of Betti numbers is to consider the 
+\ti{dimension} of $\cM$: it turns out to be 
+\begin{equation}
+  \dim \cM = 8k - \frac32 (\chi(X) + \sigma(X)), \qquad k = \int_X p_1(E)
+\end{equation}
+But because $\cM$ is nonlinear there is more to it than just its dimension.
+\fixme{...}
+
 
 \printbibliography
 
