brief comments on N=2 SYM

--- a/qft-geometry.bib
+++ b/qft-geometry.bib
@@ -19,3 +19,34 @@
   Timestamp                = {2016.01.20}
 }
 
+@Article{Seiberg:1994rs,
+  Title                    = {Electric-magnetic duality, monopole condensation, and confinement in {$\N=2$} supersymmetric {Y}ang-{M}ills theory},
+  Author                   = {Seiberg, Nathan and Witten, Edward},
+  Journal                  = {Nucl. Phys.},
+  Year                     = {1994},
+  Pages                    = {19--52},
+  Volume                   = {B426},
+
+  Bibliodb                 = {yes},
+  Eprint                   = {hep-th/9407087},
+  File                     = {:Seiberg,Witten,electric magnetic duality,-1994.pdf:PDF},
+  Owner                    = {andy},
+  Slaccitation             = {%%CITATION = NUPHA,B426,19;%%},
+  Timestamp                = {2017.08.26}
+}
+
+@Article{Witten:1988ze,
+  Title                    = {Topological quantum field theory},
+  Author                   = {Witten, Edward},
+  Journal                  = {Commun. Math. Phys.},
+  Year                     = {1988},
+  Pages                    = {353},
+  Volume                   = {117},
+
+  Bibliodb                 = {yes},
+  File                     = {:Witten, Edward - Topological quantum field theory.pdf:PDF},
+  Owner                    = {andy},
+  Slaccitation             = {%%CITATION = CMPHA,117,353;%%},
+  Timestamp                = {2017.08.26}
+}
+
