--- a/qft-geometry.bib
+++ b/qft-geometry.bib
@@ -19,6 +19,48 @@
   Timestamp                = {2016.01.20}
 }
 
+@Book{MR1031992,
+  Title                    = {Spin geometry},
+  Author                   = {Lawson, Jr. and Michelsohn, Marie-Louise},
+  Publisher                = {Princeton University Press},
+  Year                     = {1989},
+
+  Address                  = {Princeton, NJ},
+  Series                   = {Princeton Mathematical Series},
+  Volume                   = {38},
+
+  Bibliodb                 = {yes},
+  Bibliodb_last_updated    = {2008-07-30T16:21:08},
+  ISBN                     = {0-691-08542-0},
+  Mrclass                  = {53-02 (53A50 53C20 57R75 58G10)},
+  Mrnumber                 = {MR1031992 (91g:53001)},
+  Mrreviewer               = {N. J. Hitchin},
+  Owner                    = {andy},
+  Pages                    = {xii+427},
+  Timestamp                = {2017.08.28}
+}
+
+@Book{MR1367507,
+  Title                    = {The {S}eiberg-{W}itten equations and applications to the topology of smooth four-manifolds},
+  Author                   = {Morgan, John W.},
+  Publisher                = {Princeton University Press},
+  Year                     = {1996},
+
+  Address                  = {Princeton, NJ},
+  Series                   = {Mathematical Notes},
+  Volume                   = {44},
+
+  Bibliodb                 = {yes},
+  Bibliodb_last_updated    = {2008-07-30T16:22:07},
+  ISBN                     = {0-691-02597-5},
+  Mrclass                  = {57R57 (58D27 58D29)},
+  Mrnumber                 = {MR1367507 (97d:57042)},
+  Mrreviewer               = {Zolt{\'a}n Szab{\'o}},
+  Owner                    = {andy},
+  Pages                    = {viii+128},
+  Timestamp                = {2017.08.28}
+}
+
 @Article{Seiberg:1994rs,
   Title                    = {Electric-magnetic duality, monopole condensation, and confinement in {$\N=2$} supersymmetric {Y}ang-{M}ills theory},
   Author                   = {Seiberg, Nathan and Witten, Edward},
